tests/output/self_hosted/repeated_union_member_error.txt
tests/repeated_union_member_error.oomph:1: error: repeated union member 'Int'

    typedef Foo = Int | Str | Int
                  ^^^^^^^^^^^^^^^

assert() failed in "self_hosted/error.oomph", line N
